test/spec_vectors/simd_i8x16_sat_arith/fail/module_14.wat
(module (func (result v128) (i8x16.add_sat_u (i32.const 0) (f32.const 0.0))))